--- a/home.html
+++ b/home.html
@@ -8,10 +8,15 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  
   <!-- font awsome  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  
+  <!--favicon a-->
+  <link rel="shortcut icon" href="favicon.png">
+  
   <title>Hello, world!</title>
+  
   <!-- my custom css  -->
   <link rel="stylesheet" href="style.css">
 </head>
