img src removed

--- a/index.html
+++ b/index.html
@@ -233,24 +233,24 @@
 
         <div class="row py-5">
           <div class="col-md-3 card card-body hov-shed m-1.99">
-            <img src="/img_src/Fahim_alone_Abstract 1.jpg" class="img-fluid text-white" alt=""><a class="text-white"
+            <img src="Fahim_alone_Abstract 1.jpg" class="img-fluid text-white" alt=""><a class="text-white"
               href="">..</a>
             <h4>Illustration</h4>
           </div>
 
           <div class="col-md-3 card card-body hov-shed m-1.99">
-            <img src="img_src/pata.jpg" class="img-fluid text-white" alt=""><a class="text-white" href="">...</a>
+            <img src="pata.jpg" class="img-fluid text-white" alt=""><a class="text-white" href="">...</a>
             <h4>Photography</h4>
           </div>
 
           <div class="col-md-3 card card-body hov-shed m-1.99">
-            <img src="/img_src/Fahim_Looking up at sky.jpg" class="img-fluid text-white" alt=""><a class="text-white"
+            <img src="Fahim_Looking up at sky.jpg" class="img-fluid text-white" alt=""><a class="text-white"
               href="">...</a>
             <h4>Artwork</h4>
           </div>
 
           <div class="col-md-3 card card-body hov-shed m-1.99">
-            <img src="/img_src/Fahim_Glowing text.jpg" class="img-fluid text-white" alt=""><a class="text-white"
+            <img src="Fahim_Glowing text.jpg" class="img-fluid text-white" alt=""><a class="text-white"
               href="">...</a>
             <h4>Manipulation</h4>
           </div>
@@ -272,21 +272,21 @@
         <div class="col-md-4 ">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/img_src/Fahim_alone_Abstract 1.jpg" alt="">
+              <img class="img-fluid" src="Fahim_alone_Abstract 1.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/img_src/Fahim_abstractFall-again.jpg" alt="">
+              <img class="img-fluid" src="Fahim_abstractFall-again.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/img_src/Fahim_abstract_up.jpg" alt="">
+              <img class="img-fluid" src="/Fahim_abstract_up.jpg" alt="">
             </div>
           </div>
         </div>
@@ -296,21 +296,21 @@
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body ">
-              <img class="img-fluid" src="/img_src/Fahim_alone_Sunset.jpg" alt="">
+              <img class="img-fluid" src="Fahim_alone_Sunset.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/img_src/Fahim_upon_fires.jpg" alt="">
+              <img class="img-fluid" src="Fahim_upon_fires.jpg" alt="">
             </div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/img_src/Fahim_ab_nightfalls_2_a.jpg" alt="">
+              <img class="img-fluid" src="Fahim_ab_nightfalls_2_a.jpg" alt="">
             </div>
           </div>
         </div>
