contact id added and connected to navbar

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
         
       </div>
     </footer>-->
-    <section>
+    <section id="contact">
       <div class="footer-container">
         <div class="footer">
           <div class="container">
