/ removed to load picture

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="col-md-4">
           <div class="card shadow-lg port-hov">
             <div class="card-body">
-              <img class="img-fluid" src="/Fahim_abstract_up.jpg" alt="">
+              <img class="img-fluid" src="Fahim_abstract_up.jpg" alt="">
             </div>
           </div>
         </div>
